[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rotavision"
version = "0.1.0"
description = "Official Python SDK for Rotavision AI Trust Infrastructure"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.8"
authors = [
    { name = "Rotavision", email = "developers@rotavision.com" }
]
keywords = [
    "ai",
    "trust",
    "fairness",
    "governance",
    "llm",
    "monitoring",
    "india",
    "rotavision"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://rotavision.com"
Documentation = "https://rotavision.com/docs"
Repository = "https://github.com/rotavision/rotavision-python"
Changelog = "https://github.com/rotavision/rotavision-python/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/rotavision"]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.ruff]
line-length = 88
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.8"
strict = true
